--- a/AI-Hackathon-Cards/AI-Hackathon-Cards/Info.plist
+++ b/AI-Hackathon-Cards/AI-Hackathon-Cards/Info.plist
@@ -24,6 +24,8 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs microphone</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
